# learn_pyqt

./: Makefile  README.md  app.spec  build.bat  build.py  pyproject.toml
app/: config.py  main.py
app/controllers/: base.py  login.py  main.py
app/styles/: login.css
app/views/: base.py  login.py  main.py
assets/styles/: login.css  main.css
src/: main.py
ui/: main.ui
