[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Manh Pham <manhpham90vn@icloud.com>"]
readme = "README.md"

[tool.poetry.scripts]
app = "app.main:main"

[tool.poetry.dependencies]
python = ">=3.13.0,<3.14"
pyside6 = "^6.8.0.2"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
